--- a/package.json
+++ b/package.json
@@ -4,11 +4,85 @@
   "description": "ui-kit styles wrapped to ReactJS Component in React Native name-space. ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d .",
+    "build:style" : "node-sass src/styles -o ./styles"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/OneStromberg/zajno-react-ui-kit.git"
+  },
+    "engines": {
+    "npm": "^3.8.6",
+    "node": "^6.1.0"
+  },
+  "dependencies": {
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.1",
+    "eslint-plugin-import": "^2.2.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "json-loader": "^0.5.4",
+    "less": "^2.6.0",
+    "lodash": "^4.15.0",
+    "moment": "^2.17.1",
+    "node-sass": "^4.0.0",
+    "react": "^15.0.0",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-addons-shallow-compare": "^15.4.1",
+    "react-bootstrap": "^0.30.3",
+    "react-custom-scrollbars": "^4.0.0",
+    "react-dates": "^4.1.0",
+    "react-dom": "^15.0.0",
+    "react-motion": "^0.4.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "react-router-bootstrap": "^0.23.1",
+    "react-router-redux": "^4.0.6",
+    "react-select": "^1.0.0-rc.3",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "resolve-url-loader": "^1.6.0",
+    "sass-lint": "^1.10.2",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "uikit": "^3.0.0-beta.11",
+    "url-loader": "^0.5.6"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.16.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-inline-environment-variables": "^6.8.0",
+    "babel-plugin-transform-node-env-inline": "^6.8.0",
+    "babel-plugin-transform-require-ignore": "^0.0.2",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-1": "^6.1.18",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-alpha.1",
+    "enzyme": "^2.4.1",
+    "eslint": "^3.8.0",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-loader": "^1.6.0",
+    "eslint-plugin-chai": "^0.0.1",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-react": "^6.4.1",
+    "eslint-plugin-sinon": "^0.2.0",
+    "fetch": "^1.1.0",
+    "jsdom": "^9.8.3",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
+    "react-addons-test-utils": "^15.4.1",
+    "react-hot-loader": "^1.3.0",
+    "redux-thunk": "^2.1.0",
+    "style-loader": "^0.13.1"
   },
   "keywords": [
     "Zajno",
